Bug 122406 - UI: Restart dialog without an actual change of the installed extensions
Summary: UI: Restart dialog without an actual change of the installed extensions
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: All All
: medium trivial
Assignee: Bayram Çiçek
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Extension-Manager
  Show dependency treegraph
 
Reported: 2019-01-01 16:05 UTC by Telesto
Modified: 2021-03-19 13:56 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-01-01 16:05:56 UTC
Description:
UI: Restart dialog without an actual change of the installed extensions

Steps to Reproduce:
1. Download http://calc-info.de/files/BasicAddonBuilder_LibreOffice_0.5.2.oxt
2. Open LibreOffice
3. Open the extension manger
4. Add extension -> BasicAddonBuilder_LibreOffice_0.5.2.oxt
5. Decline license
6. Close extension Window -> Restart dialog appears

Based on: bug 122404

Actual Results:
Restart dialog

Expected Results:
No restart dialog, no change made


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha0+
Build ID: beae6c7a7f163daad0d4dea63a3d403af2745fd1
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-12-06_23:55:16
Locale: en-US (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Aron Budea 2019-01-01 18:19:24 UTC
Confirmed with LO 6.2.0.1 & 6.0.0.3 / Windows 7.
Comment 2 QA Administrators 2021-01-01 03:43:12 UTC Comment hidden (obsolete)
Comment 3 Roman Kuznetsov 2021-01-13 16:09:29 UTC
still repro in

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 94f6765d6ecc3145fa2d266231124003cf953118
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL
Comment 4 Bayram Çiçek 2021-03-12 19:49:51 UTC
I would like to work on this. Assigning to myself.
Comment 5 Bayram Çiçek 2021-03-14 17:28:44 UTC
The patch related to this bug is located here and waiting for a review:
https://gerrit.libreoffice.org/c/core/+/112468

Local tests and Jenkins builds are OK. I hope it will fix the issue.
Comment 6 Commit Notification 2021-03-19 13:38:11 UTC
Bayram Çiçek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7d3addde836bbd8d990a363562310b237213527a

tdf#122406: only restart when user accepted the license agreement

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.