tdf#122406: Restart dialog without an actual change of the installed extensions

Change-Id: I24cb7bcf93d1fff3172b6b4110f17aef00ef97a8